--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
     "styled-components": "^6.0.8",
-    "swiper": "^10.2.0"
+    "swiper": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
