--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
