--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.10",
     "body-scroll-lock": "^4.0.0-beta.0",
     "firebase": "^10.4.0",
+    "flag-icons": "^6.11.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
