--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.0"
   },
