--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
+    "axios": "^1.5.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "firebase": "^10.4.0",
     "flag-icons": "^6.11.1",
