--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.0"
   },
   "devDependencies": {
