--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
