--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-firebase-hooks": "^5.1.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
     "react-query": "^3.39.3",
