--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "firebase": "^10.4.0",
     "flag-icons": "^6.11.1",
+    "http-proxy-middleware": "^2.0.6",
+    "imagekit": "^4.1.4",
+    "imagekitio-react": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-fast-marquee": "^1.6.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet-async": "^1.3.0",
     "react-helmet-async-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-id-swiper": "^4.0.0",
