--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,46 +12,39 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.10",
-    "axios": "^1.5.1",
+    "@mui/material": "^5.14.19",
+    "axios": "^1.6.2",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "firebase": "^10.4.0",
-    "flag-icons": "^6.11.1",
-    "http-proxy-middleware": "^2.0.6",
+    "firebase": "^10.7.0",
     "imagekit": "^4.1.4",
-    "imagekitio-react": "^3.0.0",
-    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
-    "react-datepicker": "^4.18.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-fast-marquee": "^1.6.1",
+    "react-fast-marquee": "^1.6.2",
     "react-firebase-hooks": "^5.1.1",
-    "react-helmet-async": "^1.3.0",
-    "react-helmet-async-async": "^1.3.0",
-    "react-icons": "^4.11.0",
-    "react-id-swiper": "^4.0.0",
+    "react-helmet-async": "^2.0.3",
+    "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.7",
+    "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.8",
-    "sweetalert2": "^11.7.32",
-    "swiper": "^10.3.0"
+    "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "daisyui": "^3.7.5",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^4.4.18",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0"
   }
 }
