--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^2.0.3",
     "react-icons": "^4.12.0",
+    "react-image-crop": "^11.0.4",
+    "react-image-gallery": "^1.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
@@ -38,7 +40,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.18",
+    "daisyui": "^4.6.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
