--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.12.0",
     "react-image-crop": "^11.0.4",
     "react-image-gallery": "^1.3.0",
+    "react-photo-album": "^2.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
