--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.7.0",
     "imagekit": "^4.1.4",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
